add emailHasVerified param in login user api response
